--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="conteiner">
       <header class="header">
         <div class="header__col">
-          <a href="#" class="logo">
+          <a href="http://127.0.0.1:5500/index.html" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__img">
           </a>  
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Главная</a>
+                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Услуги</a>
+                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Отзывы</a>
+                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
@@ -31,7 +31,15 @@
         <div class="header__col--align--right">
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-            <div class="contacts__graph">График работы</div>
+            <div class="contacts__dropdown">
+              <a href="#" class="dropdown__link">График работы</a>
+              <div class="dropdown__menu">
+                <ul class="dropdown__list">
+                  <li class="dropdown__item1">пн-вс: 09:00-20:00</li>
+                  <li class="dropdown__item2">Обед: 14:00-14:30</li>
+                </ul>
+              </div>
+            </div>
           </address>
         </div>
       </header>
@@ -42,7 +50,6 @@
           <div class="preview__button">
             <button class="button">Подробнее</button>
           </div>
-          
         </div>
         <div class="tours">
           <h2 class="tours__title">
@@ -136,7 +143,7 @@
               <img src="./img/plain.png" alt="Путевки" class="single-news__img">
               <div class="single-news__content">
                 <time class="single-news__date">Декабрь 2019</time>
-                <div class="single-news__title-two">Дешевые путевки на Новый год</div>
+                <div class="single-news__title-two">Дешевые путевки на Новый год!</div>
                 <div class="single-news__text">Проведи новый год в Тайланде</div>
               </div>
             </li>
@@ -144,7 +151,7 @@
               <img src="./img/Surfer.png" alt="Серфинг" class="single-news__img">
               <div class="single-news__content">
                 <time class="single-news__date">Декабрь 2019</time>
-                <div class="single-news__title-two">Акции для серфингистов</div>
+                <div class="single-news__title-two">Акции для серфингистов!</div>
                 <div class="single-news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
               </div>
             </li>
@@ -191,19 +198,19 @@
           <div class="container footer-container__content">
             <div class="footer footer-container__section">
               <div class="footer__col">
-                <a href="#" class="logo">
+                <a href="http://127.0.0.1:5500/index.html" class="logo">
                   <img src="./img/лого.png" alt="Логотип" class="logo__pick">
                 </a>  
                 <nav class="menu">
                   <ul class="menu__list">
                     <li class="menu__item">
-                      <a href="#" class="menu__link">Главная</a>
+                      <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
                     </li>
                     <li class="menu__item">
-                      <a href="#" class="menu__link">Услуги</a>
+                      <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
                     </li>
                     <li class="menu__item">
-                      <a href="#" class="menu__link">Отзывы</a>
+                      <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
                     </li>
                   </ul>
                 </nav>
