--- a/services.html
+++ b/services.html
@@ -12,19 +12,19 @@
      <div class="conteiner top-line__conteiner">
       <header class="header header_services">
         <div class="header__col">
-          <a href="#" class="logo">
+          <a href="http://127.0.0.1:5500/index.html" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__img">
           </a>  
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Главная</a>
+                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Услуги</a>
+                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Отзывы</a>
+                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
@@ -32,7 +32,15 @@
         <div class="header__col--align--right">
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-            <div class="contacts__graph">График работы</div>
+            <div class="contacts__dropdown">
+              <a href="#" class="dropdown__link">График работы</a>
+              <div class="dropdown__menu">
+                <ul class="dropdown__list">
+                  <li class="dropdown__item1">пн-вс: 09:00-20:00</li>
+                  <li class="dropdown__item2">Обед: 14:00-14:30</li>
+                </ul>
+              </div>
+            </div>
           </address>
         </div>
       </header>
@@ -40,10 +48,10 @@
       <nav class="breadcrumbs">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Главная</a>
+            <a href="http://127.0.0.1:5500/index.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li class="breadcrumbs__item breadcrumbs__item--active">
-            <a href="#" class="breadcrumbs__link">Услуги</a>
+            <a href="http://127.0.0.1:5500/services.html" class="breadcrumbs__link">Услуги</a>
           </li>
         </ul>
       </nav>
@@ -168,19 +176,19 @@
      <div class="conteiner inner-footer__conteiner">
       <div class="footer">
         <div class="footer__col">
-          <a href="#" class="logo">
+          <a href="http://127.0.0.1:5500/index.html" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__pick">
           </a>  
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Главная</a>
+                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Услуги</a>
+                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Отзывы</a>
+                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
