--- a/index.html
+++ b/index.html
@@ -4,242 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <title>Main page</title>
-</head>
+  <title>Welcome page</title>
+</head>  
+
 <body>
-  <div class="wrapper main-page-wrapper">
-    <div class="conteiner">
-      <header class="header">
-        <div class="header__col">
-          <a href="http://127.0.0.1:5500/index.html" class="logo">
-            <img src="./img/лого.png" alt="Логотип" class="logo__img">
-          </a>  
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
-              </li>
-              <li class="menu__item">
-                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
-              </li>
-              <li class="menu__item">
-                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div class="header__col--align--right">
-          <address class="contacts">
-            <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-            <div class="contacts__dropdown">
-              <a href="#" class="dropdown__link">График работы</a>
-              <div class="dropdown__menu">
-                <ul class="dropdown__list">
-                  <li class="dropdown__item1">пн-вс: 09:00-20:00</li>
-                  <li class="dropdown__item2">Обед: 14:00-14:30</li>
-                </ul>
-              </div>
-            </div>
-          </address>
-        </div>
-      </header>
-      <main class="main-content">
-        <div class="preview">
-          <h1 class="preview__title">Авторские туры по Азии</h1>
-          <h4 class="preview__descreption">Открой для себя Азию</h4>
-          <div class="preview__button">
-            <button class="button">Подробнее</button>
-          </div>
-        </div>
-        <div class="tours">
-          <h2 class="tours__title">
-            <span class="tours__title-text">Горящие туры</span>
-            <img src="./img/flame.png" alt="Картинка заголовка тура" class="tour__title-pic"> 
-          </h2>
-          <ul class="tours__list">
-            <li class="tours__item">
-              <div class="tours__img-wrapper">
-                <img src="./img/river.png" alt="" class="tours__img">
-              </div>
-              <div class="tours__content">
-                <h3 class="tours__title-two">Таиланд</h3>
-                <div class="tours__description">
-                  <div class="tours__description-block-1">
-                    <div class="tours__description-block">
-                      <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">7-12 ночей</div>
-                    </div>
-                    <div class="tours__description-block">
-                      <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">завтраки</div>
-                    </div>
-                  </div>
-                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-                  </div>
-                  <div class="tours__button">
-                    <button class="button button--color--white">смотреть</button>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="tours__item">
-              <div class="tours__img-wrapper">
-                <img src="./img/pool.png" alt="" class="tours__img">
-              </div>
-              <div class="tours__content">
-                <h3 class="tours__title-two">Бали</h3>
-                <div class="tours__description">
-                  <div class="tours__description-block-1">
-                    <div class="tours__description-block">
-                      <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">7-12 ночей</div>
-                    </div>
-                    <div class="tours__description-block">
-                      <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">завтраки</div>
-                    </div>
-                  </div>
-                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-                  </div>
-                  <div class="tours__button">
-                    <button class="button button--color--white">смотреть</button>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="tours__item">
-              <div class="tours__img-wrapper">
-                <img src="./img/ocean.png" alt="" class="tours__img">
-              </div>
-              <div class="tours__content">
-                <h3 class="tours__title-two">Индонезия</h3>
-                <div class="tours__description">
-                  <div class="tours__description-block-1">
-                    <div class="tours__description-block">
-                      <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">7-12 ночей</div>
-                    </div>
-                    <div class="tours__description-block">
-                      <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
-                      <div class="tours__description-block-text">завтраки</div>
-                    </div>
-                  </div>
-                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-                  </div>
-                  <div class="tours__button">
-                    <button class="button button--color--white">смотреть</button>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="news">
-          <h2 class="news__title">
-            <span class="news__title-text">Новости и акции</span>
-          </h2>
-          <ul class="news__list">
-            <li class="news__item single-news">
-              <img src="./img/plain.png" alt="Путевки" class="single-news__img">
-              <div class="single-news__content">
-                <time class="single-news__date">Декабрь 2019</time>
-                <div class="single-news__title-two">Дешевые путевки на Новый год!</div>
-                <div class="single-news__text">Проведи новый год в Тайланде</div>
-              </div>
-            </li>
-            <li class="news__item single-news">
-              <img src="./img/Surfer.png" alt="Серфинг" class="single-news__img">
-              <div class="single-news__content">
-                <time class="single-news__date">Декабрь 2019</time>
-                <div class="single-news__title-two">Акции для серфингистов!</div>
-                <div class="single-news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
-              </div>
-            </li>
-          </ul>
-          <div class="paginator">
-            <div class="paginator__display">Страница 1 из 7</div>
-            <ul class="paginator__list">
-              <li class="paginator__item paginator__item--active">
-                <a href="#" class="paginator__link">1</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">2</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">3</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">4</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">5</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">6</a>
-              </li>
-              <li class="paginator__item">
-                <a href="#" class="paginator__link">7</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="about">
-          <div class="about__content">
-            <h2 class="about__title">О нас</h2>
-            <div class="about__text">
-              <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
-            </div>
-            <div class="about__button">
-              <button class="button">Подробнее</button>
-            </div>
-          </div>
-        </div>
-        <footer class="footer-container">
-          <div class="container footer-container__content">
-            <div class="footer footer-container__section">
-              <div class="footer__col">
-                <a href="http://127.0.0.1:5500/index.html" class="logo">
-                  <img src="./img/лого.png" alt="Логотип" class="logo__pick">
-                </a>  
-                <nav class="menu">
-                  <ul class="menu__list">
-                    <li class="menu__item">
-                      <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
-                    </li>
-                    <li class="menu__item">
-                      <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
-                    </li>
-                    <li class="menu__item">
-                      <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
-                    </li>
-                  </ul>
-                </nav>
-              </div>
-              <div class="footer__col footer__col-align--right">
-                <ul class="social">
-                  <li class="social__item social__item--icon--telegram">
-                    <a href="#" class="social__link"></a>
-                  </li>
-                  <li class="social__item social__item--icon--vk">
-                    <a href="#" class="social__link"></a>
-                  </li>
-                  <li class="social__item social__item--icon--fb">
-                    <a href="#" class="social__link"></a>
-                  </li>
-                  <li class="social__item social__item--icon--insta">
-                    <a href="#" class="social__link"></a>
-                  </li>
-                </ul>
-                <address class="contacts">
-                  <div class="contacts__text">Бесплатные звонки по России</div>
-                  <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-                </address>
-              </div>
-            </div>
-          </div>
-        </footer>
-      </main>
-    </div>
-  </div>
+ <div class="welcome">
+   <div class="welcome__conteiner">
+     <div class="central central--asia">
+       <img src="./img/airazia_logo.png" alt="airasia logo" class="central__logo">
+       <div class="central__text">Открой для себя Азию</div>
+       <a href="https://ilona30.github.io/my-first-project/main.html" class="welcome__btn">
+        <button class="button button--welcome">войти</button>
+       </a>
+       
+     </div>
+   </div>
+ </div>
+
+
 </body>
 </html>
