--- a/services.html
+++ b/services.html
@@ -12,19 +12,19 @@
      <div class="conteiner top-line__conteiner">
       <header class="header header_services">
         <div class="header__col">
-          <a href="http://127.0.0.1:5500/index.html" class="logo">
+          <a href="https://ilona30.github.io/my-first-project/main.html" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__img">
           </a>  
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
+                <a href="https://ilona30.github.io/my-first-project/main.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
+                <a href="https://ilona30.github.io/my-first-project/services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
+                <a href="https://ilona30.github.io/my-first-project/reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
@@ -48,10 +48,10 @@
       <nav class="breadcrumbs">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="http://127.0.0.1:5500/index.html" class="breadcrumbs__link">Главная</a>
+            <a href="https://ilona30.github.io/my-first-project/main.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li class="breadcrumbs__item breadcrumbs__item--active">
-            <a href="http://127.0.0.1:5500/services.html" class="breadcrumbs__link">Услуги</a>
+            <a href="https://ilona30.github.io/my-first-project/services.html" class="breadcrumbs__link">Услуги</a>
           </li>
         </ul>
       </nav>
@@ -176,19 +176,19 @@
      <div class="conteiner inner-footer__conteiner">
       <div class="footer">
         <div class="footer__col">
-          <a href="http://127.0.0.1:5500/index.html" class="logo">
+          <a href="https://ilona30.github.io/my-first-project/main.html" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__pick">
           </a>  
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/index.html" class="menu__link">Главная</a>
+                <a href="https://ilona30.github.io/my-first-project/main.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/services.html" class="menu__link">Услуги</a>
+                <a href="https://ilona30.github.io/my-first-project/services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="http://127.0.0.1:5500/reviews.html" class="menu__link">Отзывы</a>
+                <a href="https://ilona30.github.io/my-first-project/reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
